realme error check

--- a/limbo/affiliate/templates/mobile/samsung/samsung_page/samsung.html
+++ b/limbo/affiliate/templates/mobile/samsung/samsung_page/samsung.html
@@ -135,7 +135,7 @@
     <div class="content">
       <div class="content_body">
         <div class="content_img">
-          <<img  src="{% static 'image/mobile/samsung/samsung-galaxy-s10e-1.webp' %}" alt="">
+          <img  src="{% static 'image/mobile/samsung/samsung-galaxy-s10e-1.webp' %}" alt="">
         </div>
         <div class="content_info">
           <p></p>
