--- a/limbo/affiliate/templates/mobile/vivo/vivo Z1X/vivo Z1X.html
+++ b/limbo/affiliate/templates/mobile/vivo/vivo Z1X/vivo Z1X.html
@@ -19,11 +19,15 @@
         <div class="info">
           <h4 class="content">{{product_name}} Summary</h4>
           <p>Vivo Z1X smartphone comes with the 6.38-inch full HD (1080*2340 pixels) Super AMOLED capacitive touch display. The Vivo Z1X is powered by the Qualcomm Snapdragon 712 octa core chipset clocked at 2.3GHz paired with 64GB 6GB RAM, 128GB 4GB RAM, 128GB 6GB RAM and 128GB 8GB RAM. It has glass body on the front side and plastic body at the back. So, basically the body of the smartphone is build with plastic frame which gives the phone a descent look. The Vivo Z1X comes with the triple rear camera 48MP wide angle and standard camera, 8MP ultrawide angle camera, and 2MP depth sensing camera. It comes 32MP selfie camera which supports video recording at 1080@30fps. The smartphone is powered by Non-removable 4500mah battery which support fast charging at 22.5W. It comes with fingerprint in-display touch scanner which make easier to user to unlock the phone and it supports 4G LTE network.It runs on Android 9.0 (Pie)which can be upgradable to Android 10, Funtouch OS 10</p>
-          <div class="aff-link">
-            <a href="https://www.amazon.in/Vivo-Z1x-64GB-Phantom-Purple/dp/B0825WCMQJ/ref=mp_s_a_1_1?dchild=1&keywords=vivo+z1x&qid=1594897651&sprefix=vivo+z&sr=8-1" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
-            <a href="https://www.amazon.in/Vivo-Z1x-64GB-Phantom-Purple/dp/B0825WCMQJ/ref=mp_s_a_1_1?dchild=1&keywords=vivo+z1x&qid=1594897651&sprefix=vivo+z&sr=8-1"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            <p></p>
+          <div class="aff-link1">
+            <form action="https://www.amazon.in/Vivo-Z1x-64GB-Phantom-Purple/dp/B0825WCMQJ/ref=mp_s_a_1_1?dchild=1&keywords=vivo+z1x&qid=1594897651&sprefix=vivo+z&sr=8-1" class="affilated-link_amazon">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://www.amazon.in/Vivo-Z1x-64GB-Phantom-Purple/dp/B0825WCMQJ/ref=mp_s_a_1_1?dchild=1&keywords=vivo+z1x&qid=1594897651&sprefix=vivo+z&sr=8-1" class="affilated-link_amazon">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
+          <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
