--- a/limbo/affiliate/templates/mobile/vivo/vivo s1 pro/vivo s1pro.html
+++ b/limbo/affiliate/templates/mobile/vivo/vivo s1 pro/vivo s1pro.html
@@ -19,11 +19,15 @@
         <div class="info">
           <h4 class="content">{{product_name}} Summary</h4>
           <p>Vivo S1 Pro smartphone comes with the 6.38-inch full HD (1080*2340 pixels) Super AMOLED display. The Vivo S1 Pro is powered by the Qualcomm Snapdragon 665 octa core chipset clocked at 2.0GHz paired with 128GB 8GB RAM and supports hybrid sim slot which gives option expand your memory through SD card. It has Glass body at both the sides font and back with aluminium frame which gives it a premium look. The Vivo S1 Pro comes with the quad rear camera 48MP wide angle and standard camera, 8MP ultrawide angle camera, 2MP macro camera and 2MP depth sensing camera. It comes 32MP selfie camera which supports video recording at 1080@30fps. The smartphone is powered by Non-removable 4500mah battery which support fast charging at 18W. It comes with fingerprint in-display touch which make easier to user to unlock the phone and it supports 4G LTE network.It runs on Android 9.0, Funtouch OS 9.0.</p>
-          <div class="aff-link">
-            <a href="https://www.amazon.in/Test-Exclusive-TST_Exclusive1043-3GB-Storage/dp/B07S6BW832/ref=mp_s_a_1_1_sspa?dchild=1&keywords=vivo+s1+pro&qid=1594897803&sprefix=vivo+s&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUFPS05JQkk5RjdPRDMmZW5jcnlwdGVkSWQ9QTA4OTU4MTdMSlZSWkVJVlZYWkUmZW5jcnlwdGVkQWRJZD1BMDkzMzQyNUNOOVM0TTVCUU1KVyZ3aWRnZXROYW1lPXNwX3Bob25lX3NlYXJjaF9hdGYmYWN0aW9uPWNsaWNrUmVkaXJlY3QmZG9Ob3RMb2dDbGljaz10cnVl" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
-            <a href="https://www.amazon.in/Test-Exclusive-TST_Exclusive1043-3GB-Storage/dp/B07S6BW832/ref=mp_s_a_1_1_sspa?dchild=1&keywords=vivo+s1+pro&qid=1594897803&sprefix=vivo+s&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUFPS05JQkk5RjdPRDMmZW5jcnlwdGVkSWQ9QTA4OTU4MTdMSlZSWkVJVlZYWkUmZW5jcnlwdGVkQWRJZD1BMDkzMzQyNUNOOVM0TTVCUU1KVyZ3aWRnZXROYW1lPXNwX3Bob25lX3NlYXJjaF9hdGYmYWN0aW9uPWNsaWNrUmVkaXJlY3QmZG9Ob3RMb2dDbGljaz10cnVl" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            <p></p>
+          <div class="aff-link1">
+            <form action="https://www.amazon.in/Test-Exclusive-TST_Exclusive1043-3GB-Storage/dp/B07S6BW832/ref=mp_s_a_1_1_sspa?dchild=1&keywords=vivo+s1+pro&qid=1594897803&sprefix=vivo+s&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUFPS05JQkk5RjdPRDMmZW5jcnlwdGVkSWQ9QTA4OTU4MTdMSlZSWkVJVlZYWkUmZW5jcnlwdGVkQWRJZD1BMDkzMzQyNUNOOVM0TTVCUU1KVyZ3aWRnZXROYW1lPXNwX3Bob25lX3NlYXJjaF9hdGYmYWN0aW9uPWNsaWNrUmVkaXJlY3QmZG9Ob3RMb2dDbGljaz10cnVl">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://www.amazon.in/Test-Exclusive-TST_Exclusive1043-3GB-Storage/dp/B07S6BW832/ref=mp_s_a_1_1_sspa?dchild=1&keywords=vivo+s1+pro&qid=1594897803&sprefix=vivo+s&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUFPS05JQkk5RjdPRDMmZW5jcnlwdGVkSWQ9QTA4OTU4MTdMSlZSWkVJVlZYWkUmZW5jcnlwdGVkQWRJZD1BMDkzMzQyNUNOOVM0TTVCUU1KVyZ3aWRnZXROYW1lPXNwX3Bob25lX3NlYXJjaF9hdGYmYWN0aW9uPWNsaWNrUmVkaXJlY3QmZG9Ob3RMb2dDbGljaz10cnVl">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
+          <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
