--- a/limbo/affiliate/templates/mobile/vivo/vivo z1 pro/vivo z1 pro.html
+++ b/limbo/affiliate/templates/mobile/vivo/vivo z1 pro/vivo z1 pro.html
@@ -19,12 +19,15 @@
         <div class="info">
           <h4 class="content">{{product_name}} Summary</h4>
           <p>Vivo Z1 Pro smartphone comes with the 6.53-inch full HD (1080*2340 pixels) IPS LCD capacitive touch display. The Vivo Z1 Pro is powered by the Qualcomm Snapdragon 712 octa core chipset clocked at 2.3GHz paired with 32GB 3GB RAM, 64GB 4GB RAM, 64GB 6GB RAM and 128GB 6GB and it also had dedicated micro-SD slot which gives option expand your memory through SD card. It has glass body on the front side and plastic body at the back. So, basically the body of the smartphone is build with plastic frame which gives the phone a descent look. The Vivo Z1 Pro comes with the triple rear camera 16MP wide angle and standard camera, 8MP ultrawide angle camera, and 2MP depth sensing camera. It comes 32MP selfie camera which supports video recording at 1080@30fps. The smartphone is powered by huge Non-removable 5000mah battery which support fast charging at 18W. It comes with fingerprint scanner at the rear of the phone which make easier to user to unlock the phone and it supports 4G LTE network.It runs on Android 9.0 (Pie) which is upgradable to Android 10, Funtouch OS 10.</p>
-          <div class="aff-link">
-            <p></p>
-             <a href="https://www.flipkart.com/vivo-z1pro-sonic-black-64-gb/p/itmfghyebfrvjzfs?pid=MOBFHHT56NTTZKZ5&lid=LSTMOBFHHT56NTTZKZ5PWUNSS&marketplace=FLIPKART&pageUID=1594897902520" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from flipkart</button></a>
-             <a href="https://www.flipkart.com/vivo-z1pro-sonic-black-64-gb/p/itmfghyebfrvjzfs?pid=MOBFHHT56NTTZKZ5&lid=LSTMOBFHHT56NTTZKZ5PWUNSS&marketplace=FLIPKART&pageUID=1594897902520" class="affilated-link_flipcart"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            <p></p>
+          <div class="aff-link1">
+            <form action="https://www.flipkart.com/vivo-z1pro-sonic-black-64-gb/p/itmfghyebfrvjzfs?pid=MOBFHHT56NTTZKZ5&lid=LSTMOBFHHT56NTTZKZ5PWUNSS&marketplace=FLIPKART&pageUID=1594897902520">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
+            </form>
+            <form action="https://www.flipkart.com/vivo-z1pro-sonic-black-64-gb/p/itmfghyebfrvjzfs?pid=MOBFHHT56NTTZKZ5&lid=LSTMOBFHHT56NTTZKZ5PWUNSS&marketplace=FLIPKART&pageUID=1594897902520">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
+          <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
