--- a/limbo/affiliate/templates/mobile/vivo/vivo v17/vivo v17.html
+++ b/limbo/affiliate/templates/mobile/vivo/vivo v17/vivo v17.html
@@ -19,11 +19,15 @@
         <div class="info">
           <h4 class="content">{{product_name}} Summary</h4>
           <p>Vivo V17 smartphone comes with the 6.44-inch full HD (1080*2400 pixels) Super AMOLED capacitive touch display. The Vivo V17 is powered by the Qualcomm Snapdragon 675 octa core chipset clocked at 2.0GHz paired with 128GB 8GB RAM and 256GB 8GB RAM and it also had dedicated micro-SD slot which gives option expand your memory through SD card. It has glass body on the front side and plastic body at the back. So, basically the body of the smartphone is build with plastic frame which gives the phone a descent look. The Vivo V17 comes with the quad rear camera 48MP wide angle and standard camera, 8MP ultrawide angle camera, 2MP macro camera and 2MP depth sensing camera. It comes 32MP selfie camera which supports video recording at 1080@30fps. It comes 8MP selfie camera which supports video recording at 1080@30fps. The smartphone is powered by Non-removable 4500mah battery which support fast charging at 18W. It comes with fingerprint scanner at the rear of the phone which make easier to user to unlock the phone and it supports 4G LTE network.It runs on Android 9.0 (Pie), Funtouch OS 9.2.</p>
-          <div class="aff-link">
-            <a href="https://www.amazon.in/Vivo-Midnight-Storage-Additional-Exchange/dp/B07XD2HY9L/ref=mp_s_a_1_1?dchild=1&keywords=vivo+v17&qid=1594897456&sr=8-1" class="affilated-link_amazon"><button type="button" class="btn btn-primary">Click here to Buy from amazon</button></a>
-            <a href="https://www.amazon.in/Vivo-Midnight-Storage-Additional-Exchange/dp/B07XD2HY9L/ref=mp_s_a_1_1?dchild=1&keywords=vivo+v17&qid=1594897456&sr=8-1" class="affilated-link_amazon"><button type="button" class="btn btn-outline-primary">Click here for current price </button></a>
-            <p></p>
+          <div class="aff-link1">
+            <form action="https://www.amazon.in/Vivo-Midnight-Storage-Additional-Exchange/dp/B07XD2HY9L/ref=mp_s_a_1_1?dchild=1&keywords=vivo+v17&qid=1594897456&sr=8-1">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://www.amazon.in/Vivo-Midnight-Storage-Additional-Exchange/dp/B07XD2HY9L/ref=mp_s_a_1_1?dchild=1&keywords=vivo+v17&qid=1594897456&sr=8-1">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
           </div>
+           <p></p>
         </div>
     {% endblock content%}
     {% block specs%}
