realme error check

--- a/limbo/affiliate/templates/page/search.html
+++ b/limbo/affiliate/templates/page/search.html
@@ -330,7 +330,7 @@
                 <h3 style="color:gray;">Best PUBG mobile between 10,000-20,000-INR</h3>
                 <p style="color:gray;">PUBG is an online multiplayer battle royale game developed and published by PUBG Corporation, a subsidiary of South Korean video game company Bluehole. Now a day world most popular mobile game is PUBG, top 10 mobiles list are give below which can easily support PUBG without any lag.</p><p></p><br>
                 <div class="badge">
-                  <a class="read-more" href="#">Read more</a>
+                  <a class="read-more" href="{% url 'pubg' %}">Read more</a>
                   <a class="Categories1" style="color: gray" href="#"><b>Categories</b> : Mobile</a>
                 </div>
               </div>
@@ -346,7 +346,7 @@
                 <h3 style="color:gray;">Best camera mobile under 15,000-INR</h3>
                 <p style="color:gray;">For most of the buyers <span>camera</span> played an important role in mobile, to atttract the customers mobile companies now a days work hard on the camera's of the phone. There are top 5 mobiles which have high-resolution multi-camera setups, powerful processors, HDR capabilities. Check out this list if you are looking for the best camera mobile phones of Rs 15,000.</p><br>
                 <div class="badge">
-                  <a class="read-more" href="#">Read more</a>
+                  <a class="read-more" href="{% url 'camera15k'%}">Read more</a>
                   <a class="Categories1" style="color: gray" href="#"><b>Categories</b> : Mobile</a>
                 </div>
               </div>
@@ -362,7 +362,7 @@
                 <h3 style="color:gray;">Best top ten Mobiles Gathered for you </h3>
                 <p style="color:gray;">A flagship phone is the latest and greatest from a brand. It's the last phone they released and it's often the phone that costs the most. Many brands and manufacturers release new and improved smartphone models every year, replacing last year's flagship phone..</p><br>
                 <div class="badge">
-                  <a class="read-more" href="#">Read more</a>
+                  <a class="read-more" href="{% url 'toptenmob'%}">Read more</a>
                   <a class="Categories1" style="color: gray" href="#"><b>Categories</b> : Mobile</a>
                 </div>
               </div>
@@ -378,7 +378,7 @@
                 <h3 style="color:gray;">Best smartphone under 10,000-INR</h3>
                 <p style="color:gray;"> There are some smartphone in the market that are good within in range of 7,000-10,000 INR. <b style="color:gray">Did you know</b> The first call from a mobile phone was made on April 3, 1973. It was made by Martin Cooper, engineer of Motorola, from a mobile phone on the streets of New York.</p>
                 <div class="badge">
-                  <a class="read-more" href="#">Read more</a>
+                  <a class="read-more" href="{% url 'mobile10k'%}">Read more</a>
                   <a class="Categories1" style="color: gray" href="#"><b>Categories</b> : Mobile</a>
                 </div>
               </div>
