--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -1,5 +1,6 @@
 {% extends 'page/basic.html' %}
-{% block desc%}<meta name="description" content="hipein.com - Our Foremost motive is to serve you with correct product review and price info. So, that this marketing arrangment can genearte you with honest purchases."> {% endblock desc%}
+{% block desc%}<meta name="description" content="hipein.com - Our Foremost motive is to serve you with correct product review and price info. So, that this marketing arrangment can genearte you with honest purchases.">
+<meta name="google-site-verification" content="GkPbzbdKKlwdV1XcgaF6GrPiVmAVKRfXuIRdDlNlM1U" /> {% endblock desc%}
 {% block key%}<meta name="keywords" content="mobile specifications for pubg, mobile specification websites, mobile specifications and prices, camera phone under 15000 , camera phone amazon, top 5 camera phones, pubg mobile phones list, best pubg phone under 20000"> {% endblock key%}
   {% load static %}
    {% block css%} <link rel="stylesheet" href="{% static 'pageCss/home_pageCss.css' %}">{% endblock css%}
