realme error check

--- a/limbo/affiliate/templates/page/basic.html
+++ b/limbo/affiliate/templates/page/basic.html
@@ -104,7 +104,7 @@
         #srh button{
           margin-left: 2px;
         }
-        .carousel-item img{
+        .carousel-img{
           height: 240px;
         }
         .card-slide{
