--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -17,13 +17,13 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="{% static 'image/banner/samsung-M31-b-2.png' %}" class="d-block w-100" alt="{% static 'image/banner/samsung-M31-b.png' %}">
+            <img class="carousel-img" src="{% static 'image/banner/samsung-M31-b-2.png' %}" class="d-block w-100" alt="{% static 'image/banner/samsung-M31-b.png' %}">
           </div>
           <div class="carousel-item">
-            <img src="{% static 'image/banner/redmi-note-9-b.jpg' %}" class="d-block w-100" alt="...">
+            <img class="carousel-img" src="{% static 'image/banner/redmi-note-9-b.jpg' %}" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="{% static 'image/banner/Realme-6-Pro-b.png' %}" class="d-block w-100" alt="...">
+            <img class="carousel-img"  src="{% static 'image/banner/Realme-6-Pro-b.png' %}" class="d-block w-100" alt="...">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
