realme error check

--- a/limbo/affiliate/templates/page/basic.html
+++ b/limbo/affiliate/templates/page/basic.html
@@ -105,7 +105,8 @@
           margin-left: 2px;
         }
         .carousel-img{
-          height: 240px;
+          width: 100%;
+          height: 250px;
         }
         .card-slide{
           margin-top: 10px;
