--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -1,6 +1,5 @@
 {% extends 'page/basic.html' %}
-{% block desc%}<meta name="description" content="hipein.com - Our Foremost motive is to serve you with correct product review and price info. So, that this marketing arrangment can genearte you with honest purchases.">
-<meta name="google-site-verification" content="GkPbzbdKKlwdV1XcgaF6GrPiVmAVKRfXuIRdDlNlM1U" /> {% endblock desc%}
+{% block desc%}<meta name="description" content="hipein.com - Our Foremost motive is to serve you with correct product review and price info. So, that this marketing arrangment can genearte you with honest purchases."> {% endblock desc%}
 {% block key%}<meta name="keywords" content="mobile specifications for pubg, mobile specification websites, mobile specifications and prices, camera phone under 15000 , camera phone amazon, top 5 camera phones, pubg mobile phones list, best pubg phone under 20000"> {% endblock key%}
   {% load static %}
    {% block css%} <link rel="stylesheet" href="{% static 'pageCss/home_pageCss.css' %}">{% endblock css%}
@@ -17,13 +16,13 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="carousel-img" src="{% static 'image/banner/samsung-M31-b-2.png' %}" class="d-block w-100" alt="{% static 'image/banner/samsung-M31-b.png' %}">
+            <img src="{% static 'image/banner/samsung-M31-b-2.png' %}" class="d-block w-100" alt="{% static 'image/banner/samsung-M31-b.png' %}">
           </div>
           <div class="carousel-item">
-            <img class="carousel-img" src="{% static 'image/banner/redmi-note-9-b.jpg' %}" class="d-block w-100" alt="...">
+            <img src="{% static 'image/banner/Redmi-Note-8-Pro-b.png' %}" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img class="carousel-img"  src="{% static 'image/banner/Realme-6-Pro-b.png' %}" class="d-block w-100" alt="...">
+            <img src="{% static 'image/banner/Realme-6-Pro-b.png' %}" class="d-block w-100" alt="...">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -158,10 +157,10 @@
           <p></p>
 
           <div class="aff-link1">
-            <form action="https://www.flipkart.com/realme-x50-pro-rust-red-128-gb/p/itm13d1770db35a3?pid=MOBFPBBKTDX2EKEH&lid=LSTMOBFPBBKTDX2EKEHAKFQ0C&marketplace=FLIPKART&pageUID=1594896068771">
+            <form action="https://www.flipkart.com/realme-x50-pro-rust-red-128-gb/p/itm13d1770db35a3?pid=MOBFPBBKTDX2EKEH&lid=LSTMOBFPBBKTDX2EKEHAKFQ0C&marketplace=FLIPKART&pageUID=1594896068771" class="affilated-link_amazon">
               <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
             </form>
-            <form action="https://www.flipkart.com/realme-x50-pro-rust-red-128-gb/p/itm13d1770db35a3?pid=MOBFPBBKTDX2EKEH&lid=LSTMOBFPBBKTDX2EKEHAKFQ0C&marketplace=FLIPKART&pageUID=1594896068771">
+            <form action="https://www.flipkart.com/realme-x50-pro-rust-red-128-gb/p/itm13d1770db35a3?pid=MOBFPBBKTDX2EKEH&lid=LSTMOBFPBBKTDX2EKEHAKFQ0C&marketplace=FLIPKART&pageUID=1594896068771" class="affilated-link_flipcart">
               <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
             </form>
           </div>
@@ -310,10 +309,10 @@
 
 
        <div class="aff-link1">
-         <form action="https://www.flipkart.com/realme-6-pro-lightning-blue-64-gb/p/itm19b1945c12aee?pid=MOBFPCX76F3BYQDH&lid=LSTMOBFPCX76F3BYQDHGAICT2&marketplace=FLIPKART&pageUID=1594896233895">
+         <form action="https://www.flipkart.com/realme-6-pro-lightning-blue-64-gb/p/itm19b1945c12aee?pid=MOBFPCX76F3BYQDH&lid=LSTMOBFPCX76F3BYQDHGAICT2&marketplace=FLIPKART&pageUID=1594896233895" class="affilated-link_amazon">
            <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
          </form>
-         <form action="https://www.flipkart.com/realme-6-pro-lightning-blue-64-gb/p/itm19b1945c12aee?pid=MOBFPCX76F3BYQDH&lid=LSTMOBFPCX76F3BYQDHGAICT2&marketplace=FLIPKART&pageUID=1594896233895">
+         <form action="https://www.flipkart.com/realme-6-pro-lightning-blue-64-gb/p/itm19b1945c12aee?pid=MOBFPCX76F3BYQDH&lid=LSTMOBFPCX76F3BYQDHGAICT2&marketplace=FLIPKART&pageUID=1594896233895" class="affilated-link_flipcart">
            <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
          </form>
        </div>
