--- a/limbo/affiliate/templates/page/basic.html
+++ b/limbo/affiliate/templates/page/basic.html
@@ -104,9 +104,8 @@
         #srh button{
           margin-left: 2px;
         }
-        .carousel-img{
-          width: 100%;
-          height: 250px;
+        .carousel-inner img{
+          height: 220px;
         }
         .card-slide{
           margin-top: 10px;
