--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -309,10 +309,10 @@
 
 
        <div class="aff-link1">
-         <form action="https://www.flipkart.com/realme-6-pro-lightning-blue-64-gb/p/itm19b1945c12aee?pid=MOBFPCX76F3BYQDH&lid=LSTMOBFPCX76F3BYQDHGAICT2&marketplace=FLIPKART&pageUID=1594896233895" class="affilated-link_amazon">
+         <form action="https://www.flipkart.com/realme-6-pro-lightning-blue-64-gb/p/itm19b1945c12aee?pid=MOBFPCX76F3BYQDH&lid=LSTMOBFPCX76F3BYQDHGAICT2&marketplace=FLIPKART&pageUID=1594896233895">
            <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
          </form>
-         <form action="https://www.flipkart.com/realme-6-pro-lightning-blue-64-gb/p/itm19b1945c12aee?pid=MOBFPCX76F3BYQDH&lid=LSTMOBFPCX76F3BYQDHGAICT2&marketplace=FLIPKART&pageUID=1594896233895" class="affilated-link_flipcart">
+         <form action="https://www.flipkart.com/realme-6-pro-lightning-blue-64-gb/p/itm19b1945c12aee?pid=MOBFPCX76F3BYQDH&lid=LSTMOBFPCX76F3BYQDHGAICT2&marketplace=FLIPKART&pageUID=1594896233895">
            <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
          </form>
        </div>
