--- a/limbo/affiliate/templates/blog/pubg_mobile/pubg.html
+++ b/limbo/affiliate/templates/blog/pubg_mobile/pubg.html
@@ -68,7 +68,7 @@
           </div>
           <p class="content" style="border-bottom: 1px solid #eee;">Image source | Google-by www.bgr.in</p>
           <h4 class="content">About Realme 6</h4>
-          <p class="content">At this range realme provide more feature as compare to other phone. about pubg game play quite low performance to POCO F1 but it can run PUBG mobile at the highest graphic setting. The phone comes with a 6.50-inch touchscreen display with a resolution of 1080x2400 pixels and an aspect ratio of 20:9. Realme 6 is powered by a 2.05GHz octa-core MediaTek Helio G90T processor. It comes with 4GB of RAM. The Realme 6 runs Android 10 and is powered by a 4300mAh non-removable battery. The Realme 6 supports proprietary fast charging.  </p>
+          <p class="content">At this range realme provide more feature as compare to other phone. about pubg game play quite low performance to realme 6 but it can run PUBG mobile at the highest graphic setting. The phone comes with a 6.50-inch touchscreen display with a resolution of 1080x2400 pixels and an aspect ratio of 20:9. Realme 6 is powered by a 2.05GHz octa-core MediaTek Helio G90T processor. It comes with 4GB of RAM. The Realme 6 runs Android 10 and is powered by a 4300mAh non-removable battery. The Realme 6 supports proprietary fast charging.  </p>
           <h4 class="content">Realme 6: Key specifications </h4>
           <ul class="content">
             <li>Diaplay: 6.50-inch (1080x2400 pixels)</li>
