--- a/limbo/affiliate/templates/mobile/apple/6s/6s.html
+++ b/limbo/affiliate/templates/mobile/apple/6s/6s.html
@@ -24,7 +24,7 @@
             <form action="https://www.flipkart.com/apple-iphone-6s-space-grey-32-gb/p/itmen2yyjfzpspyg?pid=MOBEN2YYKU9386TQ&lid=LSTMOBEN2YYKU9386TQFZWR3C&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=db9728bc-df0f-4dc8-8c2f-341a008cdaac.MOBEN2YYKU9386TQ.SEARCH&ppt=sp&ppn=sp&ssid=yhhgxm0dz40000001594879820900&qH=6a4fa6f1ee635be9">
               <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
             </form>
-            <form action="https://www.flipkart.com/search?q=iphone%206s&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off" class="affilated-link_flipcart">
+            <form action="https://www.flipkart.com/search?q=iphone%206s&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off">
               <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
             </form>
           </div>
