--- a/limbo/affiliate/templates/mobile/realme/realme c11/realme c11.html
+++ b/limbo/affiliate/templates/mobile/realme/realme c11/realme c11.html
@@ -1,7 +1,7 @@
 {% extends 'page/bas.html' %}
   {% load static %}
    {% block css%} <link rel="stylesheet" href="{% static 'pageCss/Mobile/mobileSpecCss.css' %}">{% endblock css%}
-    {% block title%}Realme C11 Full specification{% endblock title%}
+    {% block title%}Realme C11 Full specification: hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
