--- a/limbo/affiliate/templates/mobile/realme/realme c11/realme c11.html
+++ b/limbo/affiliate/templates/mobile/realme/realme c11/realme c11.html
@@ -1,4 +1,7 @@
 {% extends 'page/bas.html' %}
+{% block desc%}<meta name="description" content="Realme smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block key%}<meta name="keywords" content="realme C11,  realme C11 price, realme C11 price in india, realme C11 review, realme C11 specification, realme c11 Charger how many watt, Is realme c11 worth buying,
+Can we play free fire in realme c11"> {% endblock key%}
   {% load static %}
    {% block css%} <link rel="stylesheet" href="{% static 'pageCss/Mobile/mobileSpecCss.css' %}">{% endblock css%}
     {% block title%}Realme C11 Full specification: hipein.com{% endblock title%}
