--- a/limbo/affiliate/templates/mobile/realme/realme c11/realme c11.html
+++ b/limbo/affiliate/templates/mobile/realme/realme c11/realme c11.html
@@ -1,5 +1,5 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Realme smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="At the range of 7000-INR realme C11 is comes with best feature. if you are fan of free fire it's not best phone but free fire run smoothly at this specification. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="realme C11,  realme C11 price, realme C11 price in india, realme C11 review, realme C11 specification, realme c11 Charger how many watt, Is realme c11 worth buying,
 Can we play free fire in realme c11"> {% endblock key%}
   {% load static %}
@@ -19,8 +19,8 @@ Can we play free fire in realme c11"> {% endblock key%}
           <p class="content" style="border-bottom: 1px solid #eee;">Image source | Google-by:  <a href="https://www.financialexpress.com">www.financialexpress.com</a></p>
         </div>
         <div class="info">
-          <h4 class="content">{{product_name}} summary</h4>
-          <p><span>Realme C11</span> smartphone was launched on 2020, June 30. Realme C11 is powered by a Octa-core 2.3 GHz Cortex-A53 - <span>MediaTek Helio G35 (12 nm)</span> processor. It comes with 2GB of RAM.The Realme C11 on the rear packs a13 MP, (wide), f/2.2, PDAF primary camera, 2 MP, f/2.4, (depth). The rear camera setup has autofocus. It sports a 5 MP, f/2.4, 27mm (wide) camera on the front for selfies. The front camera also features autofocus. There's a 5000mAh battery but Realme C11 having no support for fast Charging but it has <b>10W adaptor</b> which is enough for at this range.</p>
+          <h4 class="content">About Realme C11</h4>
+          <p class="content"><span>Realme C11</span> smartphone was launched on 2020, June 30. Realme C11 is powered by a Octa-core 2.3 GHz Cortex-A53 - <span>MediaTek Helio G35 (12 nm)</span> processor. It comes with 2GB of RAM.The Realme C11 on the rear packs a13 MP, (wide), f/2.2, PDAF primary camera, 2 MP, f/2.4, (depth). The rear camera setup has autofocus. It sports a 5 MP, f/2.4, 27mm (wide) camera on the front for selfies. The front camera also features autofocus. There's a 5000mAh battery but Realme C11 having no support for fast Charging but it has <b>10W adaptor</b> which is enough for at this range.</p>
           <p>The Realme C11 runs on Android 10, realme UI 1.0.The Realme C11 measures 164.4 x 75.9 x 9.1 mm (6.47 x 2.99 x 0.36 in) (height x width x thickness) and weighs 196 g (6.91 oz) . It was launched in Mint Green, Pepper Grey .Connectivity options on the Realme C11 include Wi-Fi 802.11 b/g/n, hotspot, GPS, Bluetooth v5.00, NFC, Micro USB 2.0 , 3G, and 4G. At the range of 7000-INR <span>realme C11</span> is best. if you are fan of <b>free fire</b> it's not best phone but free fire run smoothly at this specification. </p>
           <p></p>
           <div class="aff-link1">
