--- a/limbo/affiliate/templates/page/article_page.html
+++ b/limbo/affiliate/templates/page/article_page.html
@@ -578,7 +578,7 @@
           <article class="blog-post shadow">
             <div class="post">
               <div class="">
-                <img class="img-article"  src="{% static 'image/mobile/battery/samsung-galaxy-m21.jpg'%}" alt="">
+                <img class="img-article" style="width: 337px" src="{% static 'image/mobile/battery/samsung-galaxy-m21.jpg'%}" alt="">
               </div>
               <div class="post-info">
                 <h3 style="color:gray;">Top 10 best battery backup mobile</h3>
@@ -599,7 +599,7 @@
               </div>
               <div class="post-info">
                 <h3 style="color:gray;">Top 10 backend Framework for web development</h3>
-                <p style="color:gray;">If you have any knowledege about web development you also heard about <b>backend</b>. <b>What is backend</b>? . It is the term used for the behind-the-scenes activities that happen when performing any action on a website..</p><br>
+                <p style="color:gray;">If you have any knowledege about web development you also heard about <b>backend</b>. <b>What is backend</b>? . It is the term used for the behind-the-scenes activities that happen when performing any action on a website.</p>
                 <div class="badge">
                   <a class="read-more" href="{% url 'toptenframework' %}">Read more</a>
                   <a class="Categories" style="color: gray" href="#"><b>Categories</b> : Programing</a>
