--- a/limbo/affiliate/templates/page/article_page.html
+++ b/limbo/affiliate/templates/page/article_page.html
@@ -578,7 +578,7 @@
           <article class="blog-post shadow">
             <div class="post">
               <div class="">
-                <img class="img-article" style="width: 337px" src="{% static 'image/mobile/battery/samsung-galaxy-m21.jpg'%}" alt="">
+                <img class="img-article" src="{% static 'image/mobile/battery/samsung-galaxy-m21.jpg'%}" alt="">
               </div>
               <div class="post-info">
                 <h3 style="color:gray;">Top 10 best battery backup mobile</h3>
