--- a/limbo/affiliate/templates/blog/programing/top-10-framework.html
+++ b/limbo/affiliate/templates/blog/programing/top-10-framework.html
@@ -58,7 +58,7 @@
           <ul class="content">
             <li><b>Language</b>: Python</li>
             <li><b>Latest version</b>: Flask 1.1.2</li>
-            <li><b>How to install</b>: <a href="https://flask.palletsprojects.com/en/1.1.x/installation/"></a>Click here</li>
+            <li><b>How to install</b>: <a href="https://flask.palletsprojects.com/en/1.1.x/installation/">Click here</a></li>
             <li><b>Website</b>: Netflix, PythonAnywhere, Reddit etc.</li>
           </ul>
           <hr class="my-2">
@@ -130,7 +130,7 @@
           <ul class="content">
             <li><b>Language</b>: Scala or Java</li>
             <li><b>Latest version</b>: Play 2.8.1</li>
-            <li><b>How to install</b>: </li>
+            <li><b>How to install</b>: <a href="https://www.playframework.com/documentation/2.8.x/Requirements"></a>Click here </li>
             <li><b>Website</b>: Walmart, linked in, Samsung etc.</li>
           </ul>
           <hr class="my-2">
