--- a/limbo/affiliate/templates/page/article_page.html
+++ b/limbo/affiliate/templates/page/article_page.html
@@ -64,7 +64,7 @@
       .blog{
         display: flex;
         width: 80%;
-        margin: 20px 200px 20px 150px;
+        margin: auto;
 
       }
       .blog-post{
@@ -87,7 +87,7 @@
       }
       .bloger-name h4{
         padding: 20px 0 0 10px;
-        color: white;
+        color: black;
       }
       /* side */
       .side-blog{
@@ -104,8 +104,6 @@
       }
       .side-bloger-name{
         display: flex;
-        position: absolute;
-        top: 47.8%;
       }
 
       .side-bloger-name img{
@@ -116,15 +114,13 @@
       }
       .side-bloger-name h6{
         padding: 13px 0 0 10px;
-        color: white;
+        color: black;
       }
       .side-bloger-name1 a:hover{
         text-decoration: none;
       }
       .side-bloger-name1{
         display: flex;
-        position: absolute;
-        top: 79%;
       }
       .side-bloger-name1 img{
         width: 43px;
@@ -134,7 +130,7 @@
       }
       .side-bloger-name1 h6{
         padding: 13px 0 0 10px;
-        color: white;
+        color: black;
       }
       .title{
         border: 1px solid #eee;
@@ -146,8 +142,8 @@
       }
       .blogs{
         display: flex;
-        width: 76.5%;
-        margin: 20px 200px 20px 150px;
+        width: 80%;
+        margin: auto;
       }
       .blog-post{
         margin-bottom: 20px;
@@ -155,7 +151,7 @@
         border-top: 1px solid #eee;
       }
       .blog-posts{
-        width: 80%;
+        width: 70%;
       }
       .post{
         display: flex;
@@ -296,7 +292,7 @@
       @media (max-width: 1500px){
         .blog{
           width: 100%;
-          margin: 20px 150px 20px 80px;
+          margin: auto;
         }
         .bloger-name{
           top: 54.5%;
